# tabl

./: .clippy.toml  .pre-commit-config.yaml  .rustfmt.toml  .taplo.toml  CLAUDE.md  Cargo.toml  README.md  sample.csv
.zed/: settings.json
data/: new-sample.parquet  sample.csv  sample.json  sample.ndjson  sample.parquet
src/: main.rs  show.rs
tabl-core/: Cargo.toml
tabl-core/src/: column.rs  edit.rs  error.rs  lib.rs  value.rs  view.rs
tabl-engine/: Cargo.toml
tabl-engine/src/: convert.rs  format.rs  io.rs  lib.rs  sheet.rs
tabl-tui/: Cargo.toml
tabl-tui/src/: app.rs  event.rs  lib.rs  viewport.rs
tabl-tui/src/ui/: editor.rs  mod.rs  status.rs  table.rs
